2003-08-18  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Bug fix --{default,force}-{bank,program}

2003-08-17  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/timidity.c:
	  Bug fix --force-program

2003-08-17  mput <root@mput.dip.jp>

	* timidity/timidity.c (parse_opt_h): Bug Fix

2003-08-17 Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/timidity.c (parse_opt_s): -s option works correctly again
	* timidity/reverb.c (init_reverb):
	  -EFchorus=3 was cousing mono output to crash.

2003-08-15  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch], timidity/timidity.[ch]:
	  Support for "Always use program n on channel m" option
	  Support for multi-argument of -Q option
	  Support for "Enable/Disable Temperament control" option
	  Fix typo around short/long options

2003-08-13  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Support long option for "#extension opt" in timidity.cfg

2003-08-12  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix typo around long options
	  Rename --patch -> --patch-file

2003-08-12 TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix typo around long options

2003-08-11 TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Hack up around short/long options

2003-08-10 TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c (help): rewrite to fit with long options
	  Some option renamed
	  --[no-]modulation-wheel    -> --[no-]mod-wheel
	  --[no-]channel-pressure    -> --[no-]ch-pressure
	  --[no-]modulation-envelope -> --[no-]mod-envelope
	  --[no-]sort-list           -> --[no-]sort

2003-08-10 TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Commonize functions between short and long options

2003-08-09 TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Some option renamed
	  --mode                  -> --output-mode
	  --stereo                -> --output-stereo
	  --mono                  -> --output-mono