@@ -42,7 +42,7 @@
 
 int32 freq_table[128];
 int32 freq_table_tuning[128][128];
-int32 freq_table_pytha[12][128];
+int32 freq_table_pytha[24][128];
 int32 freq_table_meantone[24][128];
 int32 freq_table_pureint[24][128];
 int32 freq_table_user[4][24][128];
@@ -76,6 +76,7 @@ void init_freq_table_pytha(void)
 		 81.0 / 64,   4.0 /   3, 729.0 / 512,   3.0 /   2,
 		128.0 / 81,  27.0 /  16,  16.0 /   9, 243.0 / 128
 	};
+	static double syntonic = 80.0 / 81;
 	
 	for (i = 0; i < 12; i++)
 		for (j = -1; j < 11; j++) {
@@ -85,6 +86,8 @@ void init_freq_table_pytha(void)
 				if (l < 0 || l >= 128)
 					continue;
 				freq_table_pytha[i][l] = f * ratio[k] * 1000 + 0.5;
+				freq_table_pytha[i + 12][l] =
+						f * ratio[k] * syntonic * 1000 + 0.5;
 			}
 		}
 }
