@@ -1,3 +1,8 @@
+2003-08-19  TAMUKI Shoichi <tamuki@linet.gr.jp>
+
+	* timidity/playmidi.c, timidity/tables.c:
+	  Adjust minor of Pythagoras tuning by syntonic comma
+
 2003-08-18  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
 	* timidity/timidity.c:
